# retrosheet-docs

./: README.md  pyproject.toml
.github/workflows/: update-eventfile.yml
docs/: eventfile.md
src/retrosheet_docs/: __init__.py  update_eventfile.py
tests/: test_escape_dollars.py  test_update_eventfile.py
